SOM/antlr4-runtime/SOMParser.cpp

// Generated from SOM.g4 by ANTLR 4.9.1


#include "SOMVisitor.h"

#include "SOMParser.h"


using namespace antlrcpp;
using namespace antlr4;

SOMParser::SOMParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SOMParser::~SOMParser() {
  delete _interpreter;
}

std::string SOMParser::getGrammarFileName() const {
  return "SOM.g4";
}

const std::vector<std::string>& SOMParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SOMParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ClassdefContext ------------------------------------------------------------------

SOMParser::ClassdefContext::ClassdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SOMParser::ClassdefContext::Identifier() {
  return getToken(SOMParser::Identifier, 0);
}

tree::TerminalNode* SOMParser::ClassdefContext::Equal() {
  return getToken(SOMParser::Equal, 0);
}

SOMParser::SuperclassContext* SOMParser::ClassdefContext::superclass() {
  return getRuleContext<SOMParser::SuperclassContext>(0);
}

SOMParser::InstanceFieldsContext* SOMParser::ClassdefContext::instanceFields() {
  return getRuleContext<SOMParser::InstanceFieldsContext>(0);
}

tree::TerminalNode* SOMParser::ClassdefContext::EndTerm() {
  return getToken(SOMParser::EndTerm, 0);
}

std::vector<SOMParser::MethodContext *> SOMParser::ClassdefContext::method() {
  return getRuleContexts<SOMParser::MethodContext>();
}

SOMParser::MethodContext* SOMParser::ClassdefContext::method(size_t i) {
  return getRuleContext<SOMParser::MethodContext>(i);
}

tree::TerminalNode* SOMParser::ClassdefContext::Separator() {
  return getToken(SOMParser::Separator, 0);
}

SOMParser::ClassFieldsContext* SOMParser::ClassdefContext::classFields() {
  return getRuleContext<SOMParser::ClassFieldsContext>(0);
}

std::vector<SOMParser::ClassMethodContext *> SOMParser::ClassdefContext::classMethod() {
  return getRuleContexts<SOMParser::ClassMethodContext>();
}

SOMParser::ClassMethodContext* SOMParser::ClassdefContext::classMethod(size_t i) {
  return getRuleContext<SOMParser::ClassMethodContext>(i);
}


size_t SOMParser::ClassdefContext::getRuleIndex() const {
  return SOMParser::RuleClassdef;
}


antlrcpp::Any SOMParser::ClassdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitClassdef(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::ClassdefContext* SOMParser::classdef() {
  ClassdefContext *_localctx = _tracker.createInstance<ClassdefContext>(_ctx, getState());
  enterRule(_localctx, 0, SOMParser::RuleClassdef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(SOMParser::Identifier);
    setState(99);
    match(SOMParser::Equal);
    setState(100);
    superclass();
    setState(101);
    instanceFields();
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SOMParser::Primitive)
      | (1ULL << SOMParser::Identifier)
      | (1ULL << SOMParser::Equal)
      | (1ULL << SOMParser::Or)
      | (1ULL << SOMParser::Comma)
      | (1ULL << SOMParser::Minus)
      | (1ULL << SOMParser::Not)
      | (1ULL << SOMParser::And)
      | (1ULL << SOMParser::Star)
      | (1ULL << SOMParser::Div)
      | (1ULL << SOMParser::Mod)
      | (1ULL << SOMParser::Plus)
      | (1ULL << SOMParser::More)
      | (1ULL << SOMParser::Less)
      | (1ULL << SOMParser::At)
      | (1ULL << SOMParser::Per)
      | (1ULL << SOMParser::OperatorSequence)
      | (1ULL << SOMParser::Keyword))) != 0)) {
      setState(102);
      method();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SOMParser::Separator) {
      setState(108);
      match(SOMParser::Separator);
      setState(109);
      classFields();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << SOMParser::Primitive)
        | (1ULL << SOMParser::Identifier)
        | (1ULL << SOMParser::Equal)
        | (1ULL << SOMParser::Or)
        | (1ULL << SOMParser::Comma)
        | (1ULL << SOMParser::Minus)
        | (1ULL << SOMParser::Not)
        | (1ULL << SOMParser::And)
        | (1ULL << SOMParser::Star)
        | (1ULL << SOMParser::Div)
        | (1ULL << SOMParser::Mod)
        | (1ULL << SOMParser::Plus)
        | (1ULL << SOMParser::More)
        | (1ULL << SOMParser::Less)
        | (1ULL << SOMParser::At)
        | (1ULL << SOMParser::Per)
        | (1ULL << SOMParser::OperatorSequence)
        | (1ULL << SOMParser::Keyword))) != 0)) {
        setState(110);
        classMethod();
        setState(115);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(118);
    match(SOMParser::EndTerm);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SuperclassContext ------------------------------------------------------------------

SOMParser::SuperclassContext::SuperclassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SOMParser::SuperclassContext::NewTerm() {
  return getToken(SOMParser::NewTerm, 0);
}

tree::TerminalNode* SOMParser::SuperclassContext::Identifier() {
  return getToken(SOMParser::Identifier, 0);
}


size_t SOMParser::SuperclassContext::getRuleIndex() const {
  return SOMParser::RuleSuperclass;
}


antlrcpp::Any SOMParser::SuperclassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitSuperclass(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::SuperclassContext* SOMParser::superclass() {
  SuperclassContext *_localctx = _tracker.createInstance<SuperclassContext>(_ctx, getState());
  enterRule(_localctx, 2, SOMParser::RuleSuperclass);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SOMParser::Identifier) {
      setState(120);
      match(SOMParser::Identifier);
    }
    setState(123);
    match(SOMParser::NewTerm);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstanceFieldsContext ------------------------------------------------------------------

SOMParser::InstanceFieldsContext::InstanceFieldsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SOMParser::InstanceFieldsContext::Or() {
  return getTokens(SOMParser::Or);
}

tree::TerminalNode* SOMParser::InstanceFieldsContext::Or(size_t i) {
  return getToken(SOMParser::Or, i);
}

std::vector<SOMParser::VariableContext *> SOMParser::InstanceFieldsContext::variable() {
  return getRuleContexts<SOMParser::VariableContext>();
}

SOMParser::VariableContext* SOMParser::InstanceFieldsContext::variable(size_t i) {
  return getRuleContext<SOMParser::VariableContext>(i);
}


size_t SOMParser::InstanceFieldsContext::getRuleIndex() const {
  return SOMParser::RuleInstanceFields;
}


antlrcpp::Any SOMParser::InstanceFieldsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitInstanceFields(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::InstanceFieldsContext* SOMParser::instanceFields() {
  InstanceFieldsContext *_localctx = _tracker.createInstance<InstanceFieldsContext>(_ctx, getState());
  enterRule(_localctx, 4, SOMParser::RuleInstanceFields);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(125);
      match(SOMParser::Or);
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SOMParser::Primitive

      || _la == SOMParser::Identifier) {
        setState(126);
        variable();
        setState(131);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(132);
      match(SOMParser::Or);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassFieldsContext ------------------------------------------------------------------

SOMParser::ClassFieldsContext::ClassFieldsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SOMParser::ClassFieldsContext::Or() {
  return getTokens(SOMParser::Or);
}

tree::TerminalNode* SOMParser::ClassFieldsContext::Or(size_t i) {
  return getToken(SOMParser::Or, i);
}

std::vector<SOMParser::VariableContext *> SOMParser::ClassFieldsContext::variable() {
  return getRuleContexts<SOMParser::VariableContext>();
}

SOMParser::VariableContext* SOMParser::ClassFieldsContext::variable(size_t i) {
  return getRuleContext<SOMParser::VariableContext>(i);
}


size_t SOMParser::ClassFieldsContext::getRuleIndex() const {
  return SOMParser::RuleClassFields;
}


antlrcpp::Any SOMParser::ClassFieldsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitClassFields(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::ClassFieldsContext* SOMParser::classFields() {
  ClassFieldsContext *_localctx = _tracker.createInstance<ClassFieldsContext>(_ctx, getState());
  enterRule(_localctx, 6, SOMParser::RuleClassFields);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(135);
      match(SOMParser::Or);
      setState(139);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SOMParser::Primitive

      || _la == SOMParser::Identifier) {
        setState(136);
        variable();
        setState(141);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(142);
      match(SOMParser::Or);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassMethodContext ------------------------------------------------------------------

SOMParser::ClassMethodContext::ClassMethodContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SOMParser::MethodContext* SOMParser::ClassMethodContext::method() {
  return getRuleContext<SOMParser::MethodContext>(0);
}


size_t SOMParser::ClassMethodContext::getRuleIndex() const {
  return SOMParser::RuleClassMethod;
}


antlrcpp::Any SOMParser::ClassMethodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitClassMethod(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::ClassMethodContext* SOMParser::classMethod() {
  ClassMethodContext *_localctx = _tracker.createInstance<ClassMethodContext>(_ctx, getState());
  enterRule(_localctx, 8, SOMParser::RuleClassMethod);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    method();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodContext ------------------------------------------------------------------

SOMParser::MethodContext::MethodContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SOMParser::PatternContext* SOMParser::MethodContext::pattern() {
  return getRuleContext<SOMParser::PatternContext>(0);
}

tree::TerminalNode* SOMParser::MethodContext::Equal() {
  return getToken(SOMParser::Equal, 0);
}

tree::TerminalNode* SOMParser::MethodContext::Primitive() {
  return getToken(SOMParser::Primitive, 0);
}

SOMParser::MethodBlockContext* SOMParser::MethodContext::methodBlock() {
  return getRuleContext<SOMParser::MethodBlockContext>(0);
}


size_t SOMParser::MethodContext::getRuleIndex() const {
  return SOMParser::RuleMethod;
}


antlrcpp::Any SOMParser::MethodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitMethod(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::MethodContext* SOMParser::method() {
  MethodContext *_localctx = _tracker.createInstance<MethodContext>(_ctx, getState());
  enterRule(_localctx, 10, SOMParser::RuleMethod);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    pattern();
    setState(148);
    match(SOMParser::Equal);
    setState(151);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SOMParser::Primitive: {
        setState(149);
        match(SOMParser::Primitive);
        break;
      }

      case SOMParser::NewTerm: {
        setState(150);
        methodBlock();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PatternContext ------------------------------------------------------------------

SOMParser::PatternContext::PatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SOMParser::UnaryPatternContext* SOMParser::PatternContext::unaryPattern() {
  return getRuleContext<SOMParser::UnaryPatternContext>(0);
}

SOMParser::KeywordPatternContext* SOMParser::PatternContext::keywordPattern() {
  return getRuleContext<SOMParser::KeywordPatternContext>(0);
}

SOMParser::BinaryPatternContext* SOMParser::PatternContext::binaryPattern() {
  return getRuleContext<SOMParser::BinaryPatternContext>(0);
}


size_t SOMParser::PatternContext::getRuleIndex() const {
  return SOMParser::RulePattern;
}


antlrcpp::Any SOMParser::PatternContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitPattern(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::PatternContext* SOMParser::pattern() {
  PatternContext *_localctx = _tracker.createInstance<PatternContext>(_ctx, getState());
  enterRule(_localctx, 12, SOMParser::RulePattern);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SOMParser::Primitive:
      case SOMParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(153);
        unaryPattern();
        break;
      }

      case SOMParser::Keyword: {
        enterOuterAlt(_localctx, 2);
        setState(154);
        keywordPattern();
        break;
      }

      case SOMParser::Equal:
      case SOMParser::Or:
      case SOMParser::Comma:
      case SOMParser::Minus:
      case SOMParser::Not:
      case SOMParser::And:
      case SOMParser::Star:
      case SOMParser::Div:
      case SOMParser::Mod:
      case SOMParser::Plus:
      case SOMParser::More:
      case SOMParser::Less:
      case SOMParser::At:
      case SOMParser::Per:
      case SOMParser::OperatorSequence: {
        enterOuterAlt(_localctx, 3);
        setState(155);
        binaryPattern();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryPatternContext ------------------------------------------------------------------

SOMParser::UnaryPatternContext::UnaryPatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SOMParser::UnarySelectorContext* SOMParser::UnaryPatternContext::unarySelector() {
  return getRuleContext<SOMParser::UnarySelectorContext>(0);
}


size_t SOMParser::UnaryPatternContext::getRuleIndex() const {
  return SOMParser::RuleUnaryPattern;
}


antlrcpp::Any SOMParser::UnaryPatternContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitUnaryPattern(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::UnaryPatternContext* SOMParser::unaryPattern() {
  UnaryPatternContext *_localctx = _tracker.createInstance<UnaryPatternContext>(_ctx, getState());
  enterRule(_localctx, 14, SOMParser::RuleUnaryPattern);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    unarySelector();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BinaryPatternContext ------------------------------------------------------------------

SOMParser::BinaryPatternContext::BinaryPatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SOMParser::BinarySelectorContext* SOMParser::BinaryPatternContext::binarySelector() {
  return getRuleContext<SOMParser::BinarySelectorContext>(0);
}

SOMParser::ArgumentContext* SOMParser::BinaryPatternContext::argument() {
  return getRuleContext<SOMParser::ArgumentContext>(0);
}


size_t SOMParser::BinaryPatternContext::getRuleIndex() const {
  return SOMParser::RuleBinaryPattern;
}


antlrcpp::Any SOMParser::BinaryPatternContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitBinaryPattern(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::BinaryPatternContext* SOMParser::binaryPattern() {
  BinaryPatternContext *_localctx = _tracker.createInstance<BinaryPatternContext>(_ctx, getState());
  enterRule(_localctx, 16, SOMParser::RuleBinaryPattern);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    binarySelector();
    setState(161);
    argument();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KeywordPatternContext ------------------------------------------------------------------

SOMParser::KeywordPatternContext::KeywordPatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SOMParser::KeywordContext *> SOMParser::KeywordPatternContext::keyword() {
  return getRuleContexts<SOMParser::KeywordContext>();
}

SOMParser::KeywordContext* SOMParser::KeywordPatternContext::keyword(size_t i) {
  return getRuleContext<SOMParser::KeywordContext>(i);
}

std::vector<SOMParser::ArgumentContext *> SOMParser::KeywordPatternContext::argument() {
  return getRuleContexts<SOMParser::ArgumentContext>();
}

SOMParser::ArgumentContext* SOMParser::KeywordPatternContext::argument(size_t i) {
  return getRuleContext<SOMParser::ArgumentContext>(i);
}


size_t SOMParser::KeywordPatternContext::getRuleIndex() const {
  return SOMParser::RuleKeywordPattern;
}


antlrcpp::Any SOMParser::KeywordPatternContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitKeywordPattern(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::KeywordPatternContext* SOMParser::keywordPattern() {
  KeywordPatternContext *_localctx = _tracker.createInstance<KeywordPatternContext>(_ctx, getState());
  enterRule(_localctx, 18, SOMParser::RuleKeywordPattern);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(166); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(163);
      keyword();
      setState(164);
      argument();
      setState(168); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SOMParser::Keyword);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodBlockContext ------------------------------------------------------------------

SOMParser::MethodBlockContext::MethodBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SOMParser::MethodBlockContext::NewTerm() {
  return getToken(SOMParser::NewTerm, 0);
}

tree::TerminalNode* SOMParser::MethodBlockContext::EndTerm() {
  return getToken(SOMParser::EndTerm, 0);
}

SOMParser::BlockContentsContext* SOMParser::MethodBlockContext::blockContents() {
  return getRuleContext<SOMParser::BlockContentsContext>(0);
}


size_t SOMParser::MethodBlockContext::getRuleIndex() const {
  return SOMParser::RuleMethodBlock;
}


antlrcpp::Any SOMParser::MethodBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitMethodBlock(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::MethodBlockContext* SOMParser::methodBlock() {
  MethodBlockContext *_localctx = _tracker.createInstance<MethodBlockContext>(_ctx, getState());
  enterRule(_localctx, 20, SOMParser::RuleMethodBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    match(SOMParser::NewTerm);
    setState(172);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SOMParser::Primitive)
      | (1ULL << SOMParser::Identifier)
      | (1ULL << SOMParser::NewTerm)
      | (1ULL << SOMParser::Or)
      | (1ULL << SOMParser::Minus)
      | (1ULL << SOMParser::NewBlock)
      | (1ULL << SOMParser::Pound)
      | (1ULL << SOMParser::Exit)
      | (1ULL << SOMParser::Integer)
      | (1ULL << SOMParser::Double)
      | (1ULL << SOMParser::STString))) != 0)) {
      setState(171);
      blockContents();
    }
    setState(174);
    match(SOMParser::EndTerm);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnarySelectorContext ------------------------------------------------------------------

SOMParser::UnarySelectorContext::UnarySelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SOMParser::IdentifierContext* SOMParser::UnarySelectorContext::identifier() {
  return getRuleContext<SOMParser::IdentifierContext>(0);
}


size_t SOMParser::UnarySelectorContext::getRuleIndex() const {
  return SOMParser::RuleUnarySelector;
}


antlrcpp::Any SOMParser::UnarySelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitUnarySelector(this);
  else
    return visitor->visitChildren(this);
}

SOMParser::UnarySelectorContext* SOMParser::unarySelector() {
  UnarySelectorContext *_localctx = _tracker.createInstance<UnarySelectorContext>(_ctx, getState());
  enterRule(_localctx, 22, SOMParser::RuleUnarySelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(176);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BinarySelectorContext ------------------------------------------------------------------

SOMParser::BinarySelectorContext::BinarySelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Or() {
  return getToken(SOMParser::Or, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Comma() {
  return getToken(SOMParser::Comma, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Minus() {
  return getToken(SOMParser::Minus, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Equal() {
  return getToken(SOMParser::Equal, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Not() {
  return getToken(SOMParser::Not, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::And() {
  return getToken(SOMParser::And, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Star() {
  return getToken(SOMParser::Star, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Div() {
  return getToken(SOMParser::Div, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Mod() {
  return getToken(SOMParser::Mod, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Plus() {
  return getToken(SOMParser::Plus, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::More() {
  return getToken(SOMParser::More, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Less() {
  return getToken(SOMParser::Less, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::At() {
  return getToken(SOMParser::At, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::Per() {
  return getToken(SOMParser::Per, 0);
}

tree::TerminalNode* SOMParser::BinarySelectorContext::OperatorSequence() {
  return getToken(SOMParser::OperatorSequence, 0);
}


size_t SOMParser::BinarySelectorContext::getRuleIndex() const {
  return SOMParser::RuleBinarySelector;
}


antlrcpp::Any SOMParser::BinarySelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SOMVisitor*>(visitor))
    return parserVisitor->visitBinarySelector(this);
  else
    return visitor->visitChildren(this);
}
